--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,7 +5,7 @@
 @import "button";
 @import "card_product";
 @import "map";
-@import "welcome";
+@import "comment";
 @import"chatroom";
 @import "form";
 
