--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 
-<div class="container p-0">
+<div class="container-home p-0">
   <div id="loader">
     <div class="loading-content">
     </div>
@@ -19,7 +19,7 @@
             <h4 class="text-center mt-4 mb-3 text-white">Wanna meet me <span style="color: #F8CF61">halfway</span>?</h4>
             <div class="form-group d-flex justify-content-center mb-0" style="width: 100%;">
               <div style="width: 80%">
-                <%= f.input :location_1, label: false , placeholder: "Where you at" %>
+                <%= f.input :location_1, label: false , placeholder: "Where you at?" %>
               </div>
             </div>
             <!-- Second input box -->
