--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,10 +1,14 @@
 .avatar {
-  width: 30px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
+  object-fit: cover;
 }
 .avatar-large {
   width: 56px;
+  height: 56px;
   border-radius: 50%;
+  object-fit:cover;
 }
 .avatar-bordered {
   width: 40px;
