added read more link on each reviews

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -80,7 +80,7 @@
                 <i class="fas fa-star"></i>
               <% end %>
             </p>
-            <p class="r-comment"><%= review[:comment] %></p>
+            <p class="r-comment"><%= review[:comment] %><a href="<%= review[:url] %>"> read more</a></p>
             <p class="r-author"><%= review[:name] %></p>
           </div>
         <% end %>
