--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -3,6 +3,7 @@
   justify-content: space-around;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 18%;
 }
 
 .chat-container h6{
