--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -73,8 +73,8 @@ h2{
 
 .loader {
   margin: auto;
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #F36B7F; /* Blue */
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #F36B7F;
   border-radius: 50%;
   width: 120px;
   height: 120px;
@@ -92,32 +92,19 @@ h2{
   display: none;
 }
 
-.loading-page{
-  background-color: #FFFFFF;
-  // z-index: 100;
-  // height: 100vh;
-  // position: absolute;
-  // width: 100vw;
-  // background-image: url("https://cdn.dribbble.com/users/3460475/screenshots/6553355/371903340_location_marker_400x300.gif");
-  // background-position: center; /* Center the image */
-  // background-repeat: no-repeat; /* Do not repeat the image */
-  // // height: 50vh;
-  // padding-top: 173%;
-
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
-}
+// .loading-page{
+//   background-color: #FFFFFF;
+//   border: 16px solid #f3f3f3; /* Light grey */
+//   border-top: 16px solid #3498db; /* Blue */
+//   border-radius: 50%;
+//   width: 120px;
+//   height: 120px;
+//   animation: spin 2s linear infinite;
+// }
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
-}
-
-.loading-content{
 }
 
 .svg-icon {
