--- a/app/views/favourites/index.html.erb
+++ b/app/views/favourites/index.html.erb
@@ -4,49 +4,69 @@
       id="map"
       style="width: 100%;
 
-      height: 75vh; position: absolute; z-index: 1;"
+      height: 50vh; position: absolute; z-index: 1;"
 
       data-markers="<%= @markers.to_json %>"
       data-halfway="<%= @halfway %>"
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div>
 
-      <div style="z-index: 1;">
+<!--       <div style="z-index: 1;">
       <a href="/#"><i class="fas fa-arrow-circle-left m-2 p-1" id="back"></i></a>
     </div>
-
+ -->
     <div class="container card-design" style="padding-bottom: 56px;" id="transition">
-      <div class="d-flex justify-content-between pl-2 pr-2 pt-3">
+      <div class="d-flex justify-content-between align-items-center pb-3 pr-2 pt-3">
           <h4 class=""><strong>Favourites</strong></h4>
-          <i class="fas fa-arrows-alt-v arrow-size" id= "arrow"></i>
+<!--           <i class="fas fa-arrows-alt-v arrow-size" id= "arrow"></i> -->
       </div>
           <!-- <p >Full screen</p> -->
-      <% @favourites.each do |favourite| %>
+      <div class="content">
+        <% @favourites.each do |favourite| %>
 
-      <!-- Each cards -->
-        <div class="card-product">
-          <img class ="photo" src="<%= favourite.venue.photo %>" />
-          <div class="card-product-infos">
-            <div class="d-flex justify-content-between align-items-baseline">
-              <h6><strong><%= link_to favourite.venue.name, venue_path(favourite.venue)%></strong></h6>
-            </div>
-            <div class="d-flex justify-content-between align-items-baseline">
-              <div>
-                <i class="fas fa-map-marker-alt marker-on-card"></i>
-                <span data-coordinates="<%= [ favourite.venue.longitude, favourite.venue.latitude ].to_json %>" class="mapTrigger" data-venue="<%= favourite.venue.id %>">View on map</span>
+        <!-- Each cards -->
+          <div class="card-product" data-venue="<%= favourite.venue.id %>">
+            <img class ="photo" src="<%= favourite.venue.photo %>" />
+            <div class="card-product-infos d-flex flex-column justify-content-center" style="width: 230px;">
+              <div class="d-flex justify-content-between align-items-baseline">
+                <h6><strong><%= link_to favourite.venue.name, venue_path(favourite.venue)%></strong></h6>
               </div>
-              <span class=""><i class="far fa-star"></i> <%= favourite.venue.rating %> (<%= favourite.venue.review_count %>)</span>
+              <div class="d-flex justify-content-between align-items-baseline">
+                <div>
+                  <i class="fas fa-map-marker-alt marker-on-card"></i>
+                  <span data-coordinates="<%= [ favourite.venue.longitude, favourite.venue.latitude ].to_json %>" class="mapTrigger" data-venue="<%= favourite.venue.id %>">View on map</span>
+                </div>
+                <span class=""><i class="far fa-star"></i> <%= favourite.venue.rating %> (<%= favourite.venue.review_count %>)</span>
+              </div>
+
             </div>
-            <div class="d-flex schema-time">
-              <p>32 mins </p>
-              <p>24 mins</p>
-            </div>
-            <img class="distance" src="<%= asset_path('half_marker.png') %>" alt="">
           </div>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
 
+<!-- <script>
+
+  const scrollToVenue = (map) => {
+  const venueMarkers = document.querySelectorAll('.marker');
+  if (venueMarkers) {
+    venueMarkers.forEach((marker) => {
+      marker.addEventListener("click", (event) => {
+        const venueFavId= event.currentTarget.id;
+        const venueCards = document.querySelectorAll('.card-product');
+        const matchedElement = Array.from(venueCards).find(element => element.dataset.favourite.venue === venueFavId );
+        matchedElement.scrollIntoView({behavior: "smooth"});
+        venueMarkers.forEach(marker => marker.classList.remove('color-selected'));
+        document.querySelectorAll('.card-product').forEach(card => card.classList.remove('card-clicked'))
+        marker.classList.add('color-selected');
+        matchedElement.classList.add('card-clicked');
+      });
+    });
+  }
+}
+
+</script>
+ -->
 
