--- a/app/assets/stylesheets/components/_comment.scss
+++ b/app/assets/stylesheets/components/_comment.scss
@@ -32,14 +32,13 @@
 
 .wrapper .fa-paper-plane{
   background-color: white;
-  color: black;
+  color: #F7A0AD;
   width: 100%;
   height: 100%;
   display: flex;
   align-items:center;
   justify-content: center;
   font-size: 20px;
-  padding-left: 8px;
 }
 
 .button{
