--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -16,34 +16,33 @@
   font-size: 28px;
   font-family: "Archivo";
   font-weight: bolder;
-  // margin: 20px;
-  margin-top: 32px;
+  margin-top: 3vh;
+  margin-bottom: 3vh;
 
 }
 
 .chat-container h2{
   font-size: 22px;
-  // margin: 10px;
   margin-top: 20px;
   font-family: "Archivo";
   font-weight: bolder;
-  margin-bottom: 22px;
+  margin-top: 4vh;
   margin-left: 0%;
+  margin-bottom: 4vh;
 }
 
 .chat-box {
-  display: flex;
-  align-items: center;
-  margin-bottom: 18px;
-  // background: white;
-  padding: 8px 16px;
-  border: 1px solid rgb(235,235,235);
-  width: 100%;
-  height: 59px;
-  width: 321px;
-  border-radius: 15px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
-
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    /* margin-bottom: 18px; */
+    padding: 8px 16px;
+    border-bottom: 1px solid #f36b7f40;
+    /* border-top: 1px solid #ebebeb; */
+    width: 100%;
+    height: 10.5vh;
+    width: 100%;
 }
 
 .chat-box .chat-box-content {
@@ -75,4 +74,9 @@
   color: #555555;
   margin-left: 16px;
   font-size: 14px;
+}
+
+
+.chat-box-border{
+  border-top: 1px solid #f36b7f40;
 }
