--- a/app/assets/stylesheets/components/_comment.scss
+++ b/app/assets/stylesheets/components/_comment.scss
@@ -4,6 +4,10 @@
     flex-direction: column;
     // align-items: center;
     background-color: white;
+    .fa-paper-plane{
+      padding-left: 2.5vw;
+
+    }
 }
 
 // .top{
@@ -15,7 +19,7 @@
   background-color: white;
   position: sticky;
   top: 0;
-  border-bottom: grey 1px solid;
+  border-bottom: #f36b7f40 1px solid;
   // display:flex;
 }
 
@@ -58,7 +62,6 @@
   position: sticky;
   bottom: 55px;
   background-color: white;
-  border-top: solid grey 1px;
 }
 
 .form-chat{
