--- a/app/assets/stylesheets/components/_comment.scss
+++ b/app/assets/stylesheets/components/_comment.scss
@@ -16,11 +16,13 @@
 // }
 
 .chat-title{
-  background-color: white;
+  backdrop-filter: blur(30px);
   position: sticky;
   top: 0;
   border-bottom: #f36b7f40 1px solid;
-  // display:flex;
+  align-items: center;
+  padding-left: 35px;
+  display: flex;
 }
 
 .button-chat{
