--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 
 <div class="container p-0">
-  <div id="loader-page">
+  <div id="loader-page" >
+    <p style= "font-family: 'Archivo Black'; position: absolute; top:225px; width: 100%; text-align: center; font-size: 20px;">Finding restaurants halfway</p>
     <div class="loader"></div>
   </div>
   <div class="row home-box">
