--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -28,9 +28,9 @@
   </div>
 
   <div class="enter-chat">
-    <%= form_with scope: :comment, url: '/comment/store', local: true do |form| %>
-      <div class="form-group form-chat">
-        <%= form.text_field :comment %>
+    <%= form_with scope: :comment, class:'w-100', url: '/comment/store', local: true do |form| %>
+      <div class="form-group form-chat d-flex w-100">
+        <%= form.text_field :comment, class:'flex-grow-1' %>
         <%= form.hidden_field :chatroom, value: @chatroom.id %>
         <%= form.button :submit ,class: "button-chat"  do %>
           <i class="fas fa-paper-plane"></i>
